<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:lines="1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/officialemailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NameContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/officialEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/official_email_address"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/officialemailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/personal_email_address"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone"
            android:inputType="number"
            android:lines="1"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AddressContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address"
            android:inputType="number"
            android:lines="2" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ExperienceContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddressContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/experienceEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/total_experience"
            android:inputType="number"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CurrentExperienceContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ExperienceContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/currentExperienceEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/total_experience"
            android:inputType="number"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/OrganisationContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:helperText="Required"
        app:helperTextTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CurrentExperienceContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/organisationEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/current_organisation_name"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>












</androidx.constraintlayout.widget.ConstraintLayout>