<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:layout_marginStart="40dp">
    




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_work_24"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                />






        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"/>

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                />



        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_design"/>

        <TextView
            android:id="@+id/text_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Designation"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"/>

        <TextView
            android:id="@+id/text_official_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official_email_address"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:textStyle="italic"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"/>

        <TextView
            android:id="@+id/text_personal_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_email_address"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:textStyle="italic"
            />





</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home"/>

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:lines="1"
            />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_work_24"/>

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Experience"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"

            />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_work_24"/>

        <TextView
            android:id="@+id/text_years"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Experience"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"

            />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_organisation"/>

        <TextView
            android:id="@+id/text_organisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Current Organisation name"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"

            />





    </LinearLayout>







</LinearLayout>